tests/invalid/RealAdd_Invalid_1.whiley
function f(int x) -> int:
    return x

method main():
    int x = 1
    x = f(2.3 + (real) x)
